refactor: Mudando a listagem de reviews em detalhes de jogos para entregar apenas as mais recentes